# physim

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  application.cpp  application.hpp  main.cpp  timehelper.cpp  timehelper.h
app/Balistics/: balisticsapp.cpp  balisticsapp.hpp
app/BalisticsWithSprings/: balisticsapp.cpp  balisticsapp.hpp
inc/: drag_force_gen.hpp  fixed_point_spring_force_gen.hpp  gravity_force_gen.hpp  i_particle_force_gen.hpp  particle_contact.hpp  particle_link.hpp  pp_spring_force_gen.hpp
inc/math/: geometry.hpp  line.hpp  ray.hpp  sphere.hpp  vec3.hpp
inc/objects/: collision_manager.hpp  object_base.hpp  particle.hpp  sphere.hpp
src/: drag_force_gen.cpp  fixed_point_spring_force_gen.cpp  gravity_force_gen.cpp  i_particle_force_gen.cpp  particle_contact.cpp  particle_link.cpp  pp_spring_force_gen.cpp
src/math/: sphere.cpp  vec3.cpp
src/objects/: particle.cpp  sphere.cpp
unit_tests/: CMakeLists.txt
unit_tests/math/: TestLine.cpp  TestParticle.cpp  TestSphereCollision.cpp  TestVec3.cpp  testgeometry.cpp  testgeometry.h
unit_tests/sim/: test_ParticleContact.cpp
